[package]
name = "mai3-pumpfun-sdk"
version = "2.4.5"
edition = "2021"
authors = ["William <william@mai3.io>"]
repository = "https://github.com/MiracleAI-Labs/pumpfun-sdk"
description = "Rust SDK to interact with the Pump.fun Solana program."
license = "MIT OR Apache-2.0"
keywords = ["solana", "memecoins", "pumpfun", "pumpfun-sdk", "cpi"]
readme = "README.md"

[lib]
name="mai3_pumpfun_sdk"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "mai3_pumpfun_sdk_cli"
path = "src/main.rs"

[dependencies]
anchor-client = {git = "https://github.com/coral-xyz/anchor", package = "anchor-client", features = ["async"]}
anchor-spl = {git = "https://github.com/coral-xyz/anchor", package = "anchor-spl"}
borsh = { version = "1.5.3", features = ["derive"] }
isahc = "1.7.2"
mpl-token-metadata = "5.1.0"
pumpfun-cpi = { path = "../pumpfun-cpi", version = "2.4.5" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
solana-sdk = "2.1.7"
tokio = "1.42.0"
futures = "0.3.31"
futures-util = "0.3.31"
base64 = "0.22.1"
bs58 = "0.5.1"
rand = "0.8.5"
bincode = "1.3.3"
reqwest = { version = "0.12.12", features = ["json"] }

